--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Simulador de Calculadora</title>
-  <link rel="stylesheet" href="/estilos/estilos.css">
+  <link rel="stylesheet" href="estilos/estilos.css">
 </head>
 <body>
   <div class="contenedor">
