--- a/index.html
+++ b/index.html
@@ -1,18 +1,55 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Simulador de Calculadora</title>
-  <link rel="stylesheet" href="estilos/estilos.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bienvenidos a Sion</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/estilos/estilos.css">
+    <img src="/img/carrito.png" alt="Carrito" 
+     style="position: fixed; bottom: 20px; left: 20px; width: 60px; height: 60px; cursor: pointer;">
 </head>
 <body>
-  <div class="contenedor">
-    <h1>Simulador de Calculadora</h1>
-    <button onclick="iniciarCalculadora()">Iniciar calculadora</button>
-
-
-  </div>
-
-  <script src="main.js"></script>
+    <!-- NAVBAR DE BOOTSTRAP -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Tienda</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" 
+                    aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Productos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Acerca de</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container my-4">
+        <h1 class="text-center mb-4">Bienvenido a Sion</h1>
+        <div class="row" id="productos-container">
+        </div>
+        <div class="text-center mt-4">
+            <button id="btn-info" class="btn btn-primary">Compras</button>
+        </div>
+    </div>
+    <button id="btn-comprar-producto" class="btn btn-warning">Comprar un producto</button>
+</div>
+    <h2>Nuestras tarjetas gráficas</h2>
+    <img src="/img/grafica2.png" alt="Rx 6700" width="200">
+    <img src="/img/grafica3.png" alt="1660 Super"width="200">
+    <img src="/img/rtx2060.jpg" alt="RTX 2060" width="200">
+</div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
